--- a/package.json
+++ b/package.json
@@ -8,23 +8,36 @@
     "start": "next start",
     "svg": "svgr -d src/components/icons src/components/icons/svgs"
   },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
   "dependencies": {
     "@apollo/client": "^3.3.16",
+    "@babel/plugin-syntax-jsx": "^7.18.6",
+    "@babel/preset-env": "^7.19.3",
+    "@babel/preset-react": "^7.18.6",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@stripe/stripe-js": "^1.14.0",
     "@svgr/cli": "^5.5.0",
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "axios": "^0.21.1",
+    "babel-plugin-macros": "^3.1.0",
     "classnames": "^2.3.1",
     "graphql": "^15.4.0",
     "lodash": "^4.17.20",
     "micro": "^9.3.4",
-    "next": "11.1.0",
+    "next": "12",
     "next-stripe": "^1.0.0-beta.9",
     "node-fetch": "^2.6.1",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "sass": "^1.29.0",
     "stripe": "^8.148.0",
     "uuid": "^8.3.1",
