--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-horizontal-scrolling-menu": "^3.2.0",
     "react-responsive-carousel": "^3.2.23",
     "sass": "^1.29.0",
     "stripe": "^8.148.0",
