--- a/package.json
+++ b/package.json
@@ -18,9 +18,6 @@
     "@babel/plugin-syntax-jsx": "^7.18.6",
     "@babel/preset-env": "^7.19.3",
     "@babel/preset-react": "^7.18.6",
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-regular-svg-icons": "^6.2.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "@stripe/stripe-js": "^1.14.0",
     "@svgr/cli": "^5.5.0",
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
@@ -38,9 +35,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-horizontal-scrolling-menu": "^3.2.0",
+    "react-ionicons": "^4.2.0",
     "react-responsive-carousel": "^3.2.23",
     "sass": "^1.29.0",
     "stripe": "^8.148.0",
+    "styled-components": "^5.3.6",
     "uuid": "^8.3.1",
     "validator": "^13.1.17"
   },
