--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "svg": "svgr -d src/components/icons src/components/icons/svgs"
+    "svg": "svgr -d src/components/icons src/components/icons/svgs",
+    "postbuild": "next-sitemap"
   },
   "browserslist": [
     ">0.2%",
@@ -28,6 +29,7 @@
     "lodash": "^4.17.20",
     "micro": "^9.3.4",
     "next": "12",
+    "next-sitemap": "^3.1.24",
     "next-stripe": "^1.0.0-beta.9",
     "node-fetch": "^2.6.1",
     "nprogress": "^0.2.0",
