--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "12",
     "next-sitemap": "^3.1.24",
     "next-stripe": "^1.0.0-beta.9",
+    "nextjs-google-analytics": "^2.1.0",
     "node-fetch": "^2.6.1",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
