--- a/package.json
+++ b/package.json
@@ -25,10 +25,15 @@
     "axios": "^0.21.1",
     "babel-plugin-macros": "^3.1.0",
     "classnames": "^2.3.1",
+    "country-flag-icons": "^1.5.5",
+    "eslint-config-next": "^13.0.7",
     "graphql": "^15.4.0",
+    "i18next": "^22.4.5",
     "lodash": "^4.17.20",
     "micro": "^9.3.4",
-    "next": "12",
+    "next": "^13.0.7",
+    "next-auth": "^4.18.7",
+    "next-i18next": "^13.0.2",
     "next-sitemap": "^3.1.24",
     "next-stripe": "^1.0.0-beta.9",
     "nextjs-google-analytics": "^2.1.0",
@@ -38,8 +43,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-horizontal-scrolling-menu": "^3.2.0",
+    "react-i18next": "^12.1.1",
     "react-ionicons": "^4.2.0",
     "react-loading": "^2.0.3",
+    "react-modal": "^3.16.1",
     "react-responsive-carousel": "^3.2.23",
     "sass": "^1.29.0",
     "stripe": "^8.148.0",
