--- a/package.json
+++ b/package.json
@@ -22,20 +22,29 @@
     "@stripe/stripe-js": "^1.14.0",
     "@svgr/cli": "^5.5.0",
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
+    "apollo-client": "^2.6.10",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-http": "^1.5.17",
+    "apollo-link-token-refresh": "^0.4.0",
     "axios": "^0.21.1",
     "babel-plugin-macros": "^3.1.0",
     "classnames": "^2.3.1",
     "country-flag-icons": "^1.5.5",
     "eslint-config-next": "^13.2.4",
-    "graphql": "^15.4.0",
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
+    "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.20",
     "micro": "^9.3.4",
     "next": "^13.2.4",
     "next-auth": "^4.18.7",
     "next-sitemap": "^3.1.24",
     "next-stripe": "^1.0.0-beta.9",
+    "next-with-apollo": "^5.3.0",
     "nextjs-google-analytics": "^2.1.0",
     "node-fetch": "^2.6.1",
+    "nookies": "^2.5.2",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
