--- a/package.json
+++ b/package.json
@@ -49,9 +49,12 @@
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-gallery-carousel": "^0.4.0",
     "react-horizontal-scrolling-menu": "^3.2.0",
     "react-ionicons": "^4.2.0",
+    "react-lightgallery": "^0.9.0",
     "react-loading": "^2.0.3",
+    "react-medium-image-zoom": "^5.1.3",
     "react-modal": "^3.16.1",
     "react-responsive-carousel": "^3.2.23",
     "react-zoom-pan-pinch": "^3.0.7",
